--- a/render.yaml
+++ b/render.yaml
@@ -9,31 +9,12 @@ services:
     numInstances: 1
     healthCheckPath: /
     envVars:
-      - key: DB_HOST
-        fromService:
-          type: psql
+      - key: DATABASE_URL
+        fromDatabase:
           name: startupforge-db
-          property: host
-      - key: DB_PORT
-        fromService:
-          type: psql
-          name: startupforge-db
-          property: port
-      - key: DB_NAME
-        fromService:
-          type: psql
-          name: startupforge-db
-          property: database
-      - key: DB_USER
-        fromService:
-          type: psql
-          name: startupforge-db
-          property: user
-      - key: DB_PASSWORD
-        fromService:
-          type: psql
-          name: startupforge-db
-          property: password
+          property: connectionString
+      - key: NODE_ENV
+        value: production
 
   # 2. RAG AI Backend (Python)
   - type: web
@@ -45,7 +26,7 @@ services:
     numInstances: 1
     envVars:
       - key: MISTRAL_API_KEY
-        sync: false # User will be prompted to enter this in dashboard
+        sync: false
 
   # 3. Prediction Backend (Python)
   - type: web
@@ -68,5 +49,5 @@ services:
 databases:
   - name: startupforge-db
     databaseName: startupforge_db
-    user: postgres
+    user: startupforge_user
     plan: free
