--- a/growth_predict/models/investor_backend/Dockerfile
+++ b/growth_predict/models/investor_backend/Dockerfile
@@ -7,6 +7,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+ENV MALLOC_ARENA_MAX=2
+
 EXPOSE 8002
 
 CMD sh -c "uvicorn app:app --host 0.0.0.0 --port ${PORT:-8002}"
