--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.13.2",
         "cors": "^2.8.5",
         "csv-parser": "^3.2.0",
+        "dotenv": "^17.2.3",
         "express": "^4.18.2",
         "neo4j-driver": "^5.14.0",
         "pg": "^8.11.3"
